# kovalev

./: README  enum.cpp
essa/: Makefile  double_utils.cpp  double_utils.h  enum.h  essa.h  intersection.cpp  main.cpp  orientation.cpp  orientation.h  point.cpp  point.h  segment.cpp  segment.h
sample/: CMakeLists.txt  Test2.java  sample.cpp  test1.cpp
svn-googlecode/cg2011/p1.1/: CMakeLists.txt
svn-googlecode/cg2011/p1.1/.svn/: all-wcprops  entries
svn-googlecode/cg2011/p1.1/src/: essa.h  main.cpp  segment.cpp  segment.h  test.cpp
svn-googlecode/cg2011/p1.1/src/.svn/: all-wcprops  entries
svn-googlecode/cg2011/p1.1/src/.svn/text-base/: double_utils.cpp.svn-base  enum.cpp.svn-base  intersection.cpp.svn-base  intersection.h.svn-base  orientation.cpp.svn-base  point.cpp.svn-base  point.h.svn-base  priority_queue.h.svn-base
tasks/: Makefile  a.out  main.cpp  persistent_set.h  set.h
tree/: CMakeLists.txt  helper.h  helper.hpp  iterator.h  iterator.hpp  main.cpp  patch.h  patch.hpp  revision.h  revision.hpp  tree.h  tree.hpp  tree.pro  treenode.h  (+1 more)
trunk/src/: CMakeLists.txt  main.cpp
trunk/src/big_int/big_int/: big_int.cpp  big_int.h
trunk/src/big_int/container/: container.cpp
trunk/src/fraction/: fraction.cpp
trunk/src/geom/: enum.cpp  enum.h  errors.cpp  errors.h  point.h  predicates.h
trunk/src/geom/exact/expansion/: expansion.cpp  expansion.h
trunk/src/geom/point/: exact_point.cpp  point.cpp
trunk/src/geom/predicates/: predicates.h
trunk/src/geom/segment/: segment.cpp  segment.h
trunk/src/geom/traits/: exact.h
trunk/src/geom/utils/: utils.cpp  utils.h
(+175 files in other folders)
